--- a/src/scss/theme/_images.scss
+++ b/src/scss/theme/_images.scss
@@ -3,3 +3,9 @@
     opacity: 0.8;
   }
 }
+
+.bg-image {
+  background-size: cover !important;
+  background-repeat: no-repeat !important;
+  background-position: center center !important;
+}
