Add project and upgrade packages

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,8 +12,8 @@
 @import "node_modules/hamburgers/_sass/hamburgers/hamburgers";
 
 // photoswipe
-@import "node_modules/photoswipe/src/css/main";
-@import "node_modules/photoswipe/src/css/default-skin/default-skin";
+//@import "node_modules/photoswipe/src/css/main";
+//@import "node_modules/photoswipe/src/css/default-skin/default-skin";
 
 // theme components
 @import "theme/theme";
